<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".CreateLobbyActivity">

    <Spinner
        android:id="@+id/spinnerActivities"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView_CreateLobbyActivity_activity" />

    <TextView
        android:id="@+id/textView_CreateLobbyActivity_activity"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="Activity"
        android:textColor="@color/blackColor"

        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_CreateLobbyActivity_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Capacity"
        android:textColor="@color/blackColor"

        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/spinnerActivities" />

    <TextView
        android:id="@+id/textView_CreateLobbyActivity_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Description"
        android:textColor="@color/blackColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/editText_CreateLobbyActivity_capacity" />

    <TextView
        android:id="@+id/textView_CreateLobbyActivity_privateTAG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Lobby type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView_CreateLobbyActivity_address" />

    <TextView
        android:id="@+id/textView_CreateLobbyActivity_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_CreateLobbyActivity_create"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/editText_CreateLobbyActivity_description"
        tools:text="address " />

    <EditText
        android:id="@+id/editText_CreateLobbyActivity_capacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="2 - 15 people"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView_CreateLobbyActivity_capacity" />

    <EditText
        android:id="@+id/editText_CreateLobbyActivity_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Describe about your activity here"
        android:inputType="textPersonName"
        android:maxLength="180"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView_CreateLobbyActivity_description" />

    <Button
        android:id="@+id/button_CreateLobbyActivity_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/buttonColor"
        android:fontFamily="sans-serif"
        android:text="Cancel"
        android:textColor="@color/blackColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/guideline2" />

    <Button
        android:id="@+id/button_CreateLobbyActivity_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/buttonColor"
        android:fontFamily="sans-serif"
        android:text="Create"
        android:textColor="@color/blackColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_CreateLobbyActivity_cancel"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="485dp" />

    <RadioGroup
        android:id="@+id/radioGroup_CreateLobbyActivity_lobbyType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@+id/radioButton_CreateLobbyActivity_public"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/textView_CreateLobbyActivity_privateTAG"
        app:layout_constraintTop_toBottomOf="@+id/textView_CreateLobbyActivity_address"
        tools:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_CreateLobbyActivity_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Public" />

        <RadioButton
            android:id="@+id/radioButton_CreateLobbyActivity_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Private"
            tools:layout_editor_absoluteX="178dp"
            tools:layout_editor_absoluteY="354dp" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>