<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/button_LoginActivity_signIn"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textColor="@color/whiteColor"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_LoginActivity_insertPassword" />

    <Button
        android:id="@+id/button_LoginActivity_signUp"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/buttonColor"
        android:fontFamily="sans-serif"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView_LoginActivity_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/editText_LoginActivity_insertEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="65dp"
        android:background="#ffffff"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_LoginActivity_image" />

    <EditText
        android:id="@+id/editText_LoginActivity_insertPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:background="#ffffff"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:hint="Password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_LoginActivity_Email" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/textView_LoginActivity_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <ImageView
        android:id="@+id/imageView_LoginActivity_Email"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_email"
        app:layout_constraintBottom_toTopOf="@+id/editText_LoginActivity_insertPassword"
        app:layout_constraintStart_toStartOf="@+id/editText_LoginActivity_insertEmail"
        app:layout_constraintTop_toTopOf="@+id/editText_LoginActivity_insertEmail"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageView
        android:id="@+id/imageView_LoginActicity_Password"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_lock_outline"
        app:layout_constraintBottom_toBottomOf="@+id/editText_LoginActivity_insertPassword"
        app:layout_constraintStart_toStartOf="@+id/editText_LoginActivity_insertPassword"
        app:layout_constraintTop_toTopOf="@+id/editText_LoginActivity_insertPassword"
        app:srcCompat="@mipmap/ic_launcher_round" />

</android.support.constraint.ConstraintLayout>