<resources>
    <string name="app_name">ToGatherADProject</string>
    <string name="title_activity_profile_screen">ProfileScreenActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <string-array name="activities">
        <item>Coffee</item>
        <item>Eat out</item>
        <item>Hang out</item>
        <item>Movies</item>
        <item>Games</item>
        <item>Sports</item>
        <item>Study</item>
        <item>Outdoor</item>
    </string-array>

    <string name="login_Failed">Login Failed</string>

    <string name="no_geocoder_available">No geocoder available</string>

    <string name="fetch_address">Fetch address</string>

    <string name="address_found">Address found</string>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>


    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="username">username</string>
    <string name="toast_emptyFieldLogin">\Please fill all of the fields properly</string>
    <string name="toast_cancelRegistration">Registration cancelled</string>
    <string name="toast_emptyFieldLobby">Please fill all of the fields properly</string>
    <string name="toast_invalidCapacityLobby">Capacity Error, could not create room</string>
    <string name="toast_successFetchAddress">Address found</string>
    <string name="toast_emptyFetchAddress">Address has not been fetched</string>
    <string name="toast_emptyFieldRegistration">Please fill all of the fields properly</string>
    <string name="toast_loginFailed">Login Failed</string>
    <string name="toast_invalidRePassRegistration">Passwords are not the same</string>
    <string name="toast_invalidPassRegistration">Password needs to be more than 6 characters</string>
    <string name="toast_invalidNameRegistration">Username must be 4 or more characters</string>
    <string name="toast_invalidEmailRegistration">invalid email</string>
    <string name="toast_rateUp">Liked</string>
</resources>
