...
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_HomeActivity_viewProfile"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_HomeActivity_createLobby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/round_button"
...
